--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,9 @@
-HUBSPOT_API_KEY=<token>
-HUBSPOT_PORTAL_ID=<token>
+HUBSPOT_API_KEY=<d77ea056-4a8d-482b-ae25-f3e47bb9736d>
+HUBSPOT_PORTAL_ID=<shamfreezy llc>
 INSTAGRAM_ACCESS_TOKEN=<token>
 SENDGRID_API_KEY=<token>
-CONTENTFUL_ACCESS_TOKEN=<token>
-CONTENTFUL_ACCESS_TOKEN_PREVIEW=<token>
+CONTENTFUL_ACCESS_TOKEN=<CFPAT-Wq5FMQPNIGinIpkb-xhjwCLqOlj5MBx_KcFojHT4T-o>
+CONTENTFUL_ACCESS_TOKEN_PREVIEW=<CFPAT-Wq5FMQPNIGinIpkb-xhjwCLqOlj5MBx_KcFojHT4T-o>
 CONTENTFUL_ENVIRONMENT=master
 GOOGLE_TAGMANAGER_ID=<token>
 GOOGLE_ANALYTICS_ID=<token>
